@@ -1,3 +1,9 @@
+2004-10-07  Geert Stappers  <stappers@stappers.nl>
+
+	* Makefile.am:
+
+	Distribute the tarball also with the printing sources.
+
 2004-09-30  David Malcolm  <dmalcolm@redhat.com>
 
 	* cong-document.c: 
